--- a/production.yml
+++ b/production.yml
@@ -19,8 +19,9 @@ services:
       - postgres
       - redis
     env_file:
-      - ./.envs/.production/.django
-      - ./.envs/.production/.postgres
+      - ./.env
+      # - ./.envs/.production/.django
+      # - ./.envs/.production/.postgres
     command: /start
     networks:
       - front
@@ -60,7 +61,8 @@ services:
       - production_postgres_data:/var/lib/postgresql/data:Z
       - production_postgres_data_backups:/backups:z
     env_file:
-      - ./.envs/.production/.postgres
+      - ./.env
+      # - ./.envs/.production/.postgres
     networks:
       - back
     restart: unless-stopped
