--- a/production.yml
+++ b/production.yml
@@ -19,9 +19,8 @@ services:
       - postgres
       - redis
     env_file:
-      - ./.env
-      # - ./.envs/.production/.django
-      # - ./.envs/.production/.postgres
+      - ./.envs/.production/.django
+      - ./.envs/.production/.postgres
     command: /start
     networks:
       - front
@@ -61,8 +60,7 @@ services:
       - production_postgres_data:/var/lib/postgresql/data:Z
       - production_postgres_data_backups:/backups:z
     env_file:
-      - ./.env
-      # - ./.envs/.production/.postgres
+      - ./.envs/.production/.postgres
     networks:
       - back
     restart: unless-stopped
