added gependencies for cairosvg

--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -41,6 +41,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   libpq-dev \
   # Translations dependencies
   gettext \
+  # cairosvg dependencies
+  python3-pip python3-cffi python3-brotli libpango-1.0-0 libpangoft2-1.0-0 libcairo2-dev python3-dev libffi-dev  \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
